<resources>
    <string name="app_name">BloodNet</string>
    <string name="menu_save">Save</string>
    <string name="menu_cancel">Cancel</string>
    <string name="title_activity_sign_in">Sign in</string>

    <!-- Image Description -->
    <string name="image_logo">Logo</string>
    <string name="image_profile">Profile Picture</string>
    <string name="credit_hospital">Icon made by <a href="http://www.flaticon.com/authors/freepik">Freepik</a> from </string>
    <string name="credit_hospital1"><a href="www.flaticon.com"> www.flaticon.com </a></string>
    <string name="credit_bloodbag">Icon made by <a href="http://www.flaticon.com/authors/madebyoliver">Madebyoliver</a> from </string>
    <string name="credit_bloodbag1"><a href="www.flaticon.com"> www.flaticon.com </a></string>
    <string name="ldr_email">Have you found a bug in BloodNet? Feel free to contact us <a href="mailto:LDR_Productions@gmail.com?Subject=Bug%20Issue" target="_top">here</a></string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_confirm">Confirm Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Sign up</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_back_login">Back to Log In</string>

    <!-- Profile Details -->
    <string name="prompt_name">Name</string>
    <string name="prompt_contact">Contact Number</string>
    <string name="prompt_blood_type">Blood Type</string>
    <string name="prompt_gender">Gender</string>
    <string name="prompt_birthdate">Birthdate</string>

    <!-- Credit -->
    <string name="about_bloodnet">About BloodNet</string>
    <string name="credit_medical_icons">Medical Icons by Creative Stall from the Noun Project</string>

    <!--  edit profiles placeholder text -->
    <string name="title_activity_edit_profile_fab">My Profile</string>
    <string name="action_settings">Settings</string>
    <!-- Buttons -->
    <string name="button_startdonation">Start Donation</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_ok">Ok</string>

    <!-- Requirements Details -->
    <string name="prompt_requirements">Requirements</string>
    <string name="requirement_1">I am feeling healthy and well.</string>
    <string name="requirement_2">I am at least 110 lbs.</string>
    <string name="requirement_3">I have had no alcohol intake in the last 24 hours.</string>
    <string name="requirement_4">I have had at least 7 hours of sleep.</string>
    <string name="requirement_5">I have taken no medication in the last 24 hours.</string>
    <string name="requirement_6">I have had something to eat prior the blood donation.</string>

    <!-- Post Details -->
    <string name="prompt_location">Location</string>
    <string name="prompt_bloodtype">Blood Type</string>
    <string name="prompt_quantity">Number of Bags</string>
    <string name="prompt_photo">Upload Photo</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_test">Test</string>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="bloodtype">
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>O+</item>
        <item>O-</item>
    </string-array>

    <!-- Database Strings -->
    <string name="db_user_reference">users</string>
    <string name="settings_account">Account</string>
    <string name="settings_about">About</string>
    <string name="settings_logout">Logout</string>
    <string name="no_entries_found">No entries found.</string>


</resources>
