<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_requirements"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="edu.mobapde.bloodnet.RequirementsActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tb_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ToolBarStyle"
        app:popupTheme="@style/PopupBarStyle"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_padding_left"
        android:paddingRight="@dimen/activity_padding_right"
        >
        <CheckBox
            android:text="@string/requirement_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox"
            android:padding="15dp"
            android:layout_marginTop="10dp"/>

        <CheckBox
            android:text="@string/requirement_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox2"
            android:padding="15dp"/>

        <CheckBox
            android:text="@string/requirement_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox3"
            android:padding="15dp"/>

        <CheckBox
            android:text="@string/requirement_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox4"
            android:padding="15dp"/>

        <CheckBox
            android:text="@string/requirement_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox5"
            android:padding="15dp"/>

        <CheckBox
            android:text="@string/requirement_6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox6"
            android:padding="15dp"
            android:layout_marginBottom="10dp"/>


        <Button
            android:id="@+id/b_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:layout_marginTop="20dp"
            android:textColor="@color/textMainColor" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/b_cancel"
            />

    </LinearLayout>




</LinearLayout>
