<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="edu.mobapde.bloodnet.RegistrationActivity">

<LinearLayout
    android:id="@+id/activity_edit_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp">

    <!--
        TODO:
        ... should reg be email & pass only then move to a diff activity with details?? ...
        1. One liner edit text
            - enter should be next?
        2. Number Only for Contact #
        3. Bday should be date picker
        4. Gender & Blood Type should be Dropdown
            - nshould +/- be separate dropdown?
        6. email uneditable
        7. password should be secure
    -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">
        <ImageView
            android:contentDescription="@string/image_logo"
            android:id="@+id/iv_logo"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:src="@mipmap/temp_logo" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textSize="48dp"
            android:textColor="@color/colorPrimary"
            android:id="@+id/tv_app_name"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/editcontent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:contentDescription="@string/prompt_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="7dp"
                android:src="@drawable/ic_person_black_24dp"
                android:tint="@color/textSecondaryColor" />


            <EditText
                android:id="@+id/tv_content_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/prompt_name"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:contentDescription="@string/prompt_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="7dp"
                android:src="@drawable/ic_email_black_24px"
                android:tint="@color/textSecondaryColor" />


            <EditText
                android:id="@+id/tv_content_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/prompt_email"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:contentDescription="@string/prompt_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="7dp"
                android:src="@drawable/ic_lock_black_24px"
                android:tint="@color/textSecondaryColor" />


            <EditText
                android:id="@+id/tv_content_pw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:contentDescription="@string/prompt_password_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="7dp"
                android:src="@drawable/ic_lock_outline_black_24px"
                android:tint="@color/textSecondaryColor" />


            <EditText
                android:id="@+id/tv_content_confirm_pw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password_confirm"
                android:inputType="textPassword"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:contentDescription="@string/prompt_blood_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="7dp"
                android:src="@drawable/ic_opacity_black_24px"
                android:tint="@color/textSecondaryColor" />

            <Spinner style="@style/Base.V7.Widget.AppCompat.EditText"
                android:id="@+id/s_bloodtype"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/action_register"
            android:textColor="@color/textMainColor" />

        <Button style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_back_login"
            android:padding="0dp"
            android:layout_margin="0dp"
            />

    </LinearLayout>



</LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />
</android.support.design.widget.CoordinatorLayout>