<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_post"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="edu.mobapde.bloodnet.CreatePostActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tb_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ToolBarStyle"
        app:popupTheme="@style/PopupBarStyle"/>

    <LinearLayout
        android:id="@+id/editcontent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_padding_left"
        android:paddingRight="@dimen/activity_padding_right">

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:contentDescription="@string/prompt_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="7dp"
                android:src="@drawable/ic_person_black_24dp"
                android:tint="@color/textSecondaryColor" />

            <EditText
                android:id="@+id/tv_content_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_name"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"

            android:layout_marginTop="10dp">


            <ImageView
                android:contentDescription="@string/prompt_birthdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="7dp"
                android:src="@drawable/ic_pin_drop_black_24px"
                android:tint="@color/textSecondaryColor" />


            <EditText

                android:id="@+id/tv_content_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_location"
                android:inputType="date"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">


            <ImageView
                android:contentDescription="@string/prompt_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="7dp"
                android:src="@drawable/ic_call_black_24dp"
                android:tint="@color/textSecondaryColor" />

            <EditText
                android:id="@+id/tv_content_num"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_contact"
                android:inputType="phone" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <ImageView
                android:contentDescription="@string/prompt_blood_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="7dp"
                android:src="@drawable/ic_opacity_black_24px"
                android:tint="@color/textSecondaryColor" />

            <EditText
                android:id="@+id/tv_content_btype"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_blood_type"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <ImageView
                android:contentDescription="@string/prompt_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="7dp"
                android:src="@drawable/ic_accessibility_black_24px"
                android:tint="@color/textSecondaryColor" />

            <EditText
                android:id="@+id/tv_content_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_quantity"
                android:inputType="number"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <ImageView
                android:contentDescription="@string/prompt_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="7dp"
                android:src="@drawable/ic_insert_photo_black_24px"
                android:tint="@color/textSecondaryColor" />

            <EditText
                android:id="@+id/tv_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_photo"
                android:inputType="number"/>

        </LinearLayout>

        <Button
            android:id="@+id/b_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:layout_marginTop="20dp"
            android:textColor="@color/textMainColor" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/b_cancel"
            android:layout_marginBottom="20dp"
            />

    </LinearLayout>



</LinearLayout>
