<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="edu.mobapde.bloodnet.EditProfileFABActivity"
    tools:showIn="@layout/activity_profile_fab">

    <LinearLayout
        android:id="@+id/activity_edit_profile"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/content_horizontal_margin"
        android:paddingRight="@dimen/content_horizontal_margin"
        android:orientation="vertical">

        <!--
            TODO:
            1. One liner edit text
                - enter should be next?
            2. Number Only for Contact #
            3. Bday should be date picker
            4. Gender & Blood Type should be Dropdown
                - nshould +/- be separate dropdown?
            6. email uneditable
            7. password should be secure
        -->


        <LinearLayout
            android:id="@+id/editcontent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/content_vertical_margin"
            android:paddingBottom="@dimen/content_vertical_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:contentDescription="@string/prompt_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="7dp"
                    android:src="@drawable/ic_person_black_24dp"
                    android:tint="@color/textSecondaryColor" />

                <EditText
                    android:id="@+id/tv_content_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="@string/prompt_name"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:contentDescription="@string/prompt_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="7dp"
                    android:src="@drawable/ic_email_black_24px"
                    android:tint="@color/textSecondaryColor" />


                <EditText
                    android:focusableInTouchMode="false"
                    android:focusable="false"
                    android:id="@+id/tv_content_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/prompt_email"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:contentDescription="@string/prompt_contact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="7dp"
                    android:src="@drawable/ic_call_black_24dp"
                    android:tint="@color/textSecondaryColor" />

                <EditText
                    android:id="@+id/tv_content_num"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_contact"
                    android:inputType="phone" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">


                <ImageView
                    android:contentDescription="@string/prompt_birthdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="7dp"
                    android:src="@drawable/ic_cake_black_24px"
                    android:tint="@color/textSecondaryColor" />


                <EditText
                    android:id="@+id/tv_content_bday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_birthdate"
                    android:focusableInTouchMode="false"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:contentDescription="@string/prompt_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="7dp"
                    android:src="@drawable/ic_accessibility_black_24px"
                    android:tint="@color/textSecondaryColor" />

                <EditText
                    android:id="@+id/tv_content_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_gender" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:contentDescription="@string/prompt_blood_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="7dp"
                    android:src="@drawable/ic_opacity_black_24px"
                    android:tint="@color/textSecondaryColor" />

                <EditText
                    android:id="@+id/tv_content_btype"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_blood_type"/>

            </LinearLayout>


        </LinearLayout>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_save"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/textMainColor"
            android:id="@+id/btn_save"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_cancel"
            />
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
